# clighter

./: .gitignore  README.md  REQUIREMENTS.md  _setup.py  common.py  demo.py  engine.py  main.py  scene.py  setup.cfg  setup.py  spaceshooter.py
.env/: prepare-setup.py
.github/workflows/: pythonci.yml
assets/: bullet.txt  explosion_1.txt  explosıon_2.txt  left_bullet.txt  monster.txt
cli/: engine.py  game.py  input.py  scene.py
cli/util/: input.py  output.py  unix.py  windows.py
clighter/: __init__.py
clighter/cli/: __init__.py  game.py  input.py  scene.py
clighter/cli/util/: __init__.py  stdin.py  stdout.py
clighter/core/: __init__.py  animation.py  common.py  dimension.py  engine.py  factory.py  game.py  input.py  object.py  position.py  rect.py  scene.py
clighter/core/util/: __init__.py  collections.py  files.py  singleton.py
core/: animation.py  engine.py  factory.py  game.py  input.py  object.py  rect.py  scene.py
core/util/: collections.py  files.py  singleton.py
examples/mario/: mario.py
examples/mario/assets/: mario.txt
examples/showcase/: main.py
examples/showcase/assets/: character.txt
examples/spaceshooter/: spaceshooter.py
examples/spaceshooter/assets/: enemy_ship.txt  explosion_2.txt  spaceship.txt
