[metadata]
name=clighter
version=0.0.1
author=bilginyuksel
author_email=bilgin.yuksel96@gmail.com
description='Game engine for CLI games.'
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/bilginyuksel/clighter
project_urls=
    Bug Tracker=https://github.com/bilginyuksel/clighter/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    = .
packages= find:
python_requires=>=3.6
